--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       <div class="space"></div>
     </div>
   </div>
+  <!-- Tomorrows Tech -->
   <div class="col-xs-12 col-sm-6 col-lg-4">
   <div class="box">
   <div class="icon">
@@ -127,6 +128,32 @@
     <div class="info">
       <a href="https://cfissell50.github.io/web-workbook/04week/tomorrows-technology/index.html">
         <img border="0" alt="tomorrowstech" src="img/bg.jpg" width="45%" height="50%">
+      </a>
+    </div>
+  </div>
+  <div class="space"></div>
+  </div>
+  </div>
+  <!-- MFRM Pantry -->
+
+  <div class="col-xs-12 col-sm-6 col-lg-4">
+  <div class="box">
+  <div class="icon">
+    <div class="image"><i class="fa fa-flag"></i></div>
+    <div class="info">
+        <img border="0" alt="mfrmpantry" src="img/mfrmpantryheader.png" width="45%" height="50%">
+    </div>
+  </div>
+  <div class="space"></div>
+  </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-6 col-lg-4">
+  <div class="box">
+  <div class="icon">
+    <div class="image"><i class="fa fa-flag"></i></div>
+    <div class="info">
+        <img border="0" alt="pantrylogo" src="img/mfrmpantrycan.png" width="45%" height="50%">
       </a>
     </div>
   </div>
@@ -175,6 +202,11 @@
               <a href="https://www.linkedin.com/in/collin-fissell-11a527a0/">
                 <img border="0" alt="linked in" src="img/linkedinlogo.png" width="" height="">
               </a>
+            </li>
+            <br>
+            <li>Or Email me @</li>
+            <br>
+            <li>cfissell@hotmail.com</li>
           </ul>
         </div>
       </div>
